--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -277,6 +277,12 @@
     <Compile Include="RegistrarEstadia\RegistrarEstadias.Designer.cs">
       <DependentUpon>RegistrarEstadias.cs</DependentUpon>
     </Compile>
+    <Compile Include="RegistrarEstadia\VincularHuespedes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegistrarEstadia\VincularHuespedes.Designer.cs">
+      <DependentUpon>VincularHuespedes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositorios\RepositorioConsumibles.cs" />
     <Compile Include="Repositorios\RepositorioEstadia.cs" />
     <Compile Include="Repositorios\RepositorioEstadoReserva.cs" />
@@ -421,6 +427,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegistrarEstadia\RegistrarEstadias.resx">
       <DependentUpon>RegistrarEstadias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RegistrarEstadia\VincularHuespedes.resx">
+      <DependentUpon>VincularHuespedes.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
