--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -136,7 +136,7 @@
     <Compile Include="AbmReserva\GenerarReserva.Designer.cs">
       <DependentUpon>GenerarReserva.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmReserva\HabitacionDisponibleSearchDTO.cs" />
+    <Compile Include="Modelo\HabitacionDisponible.cs" />
     <Compile Include="AbmReserva\EditarReserva.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,12 +148,6 @@
     </Compile>
     <Compile Include="AbmReserva\ModificarReserva.Designer.cs">
       <DependentUpon>ModificarReserva.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AbmReserva\RecepcionABMReserva.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmReserva\RecepcionABMReserva.Designer.cs">
-      <DependentUpon>RecepcionABMReserva.cs</DependentUpon>
     </Compile>
     <Compile Include="AbmReserva\VincularCliente.cs">
       <SubType>Form</SubType>
@@ -370,9 +364,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AbmReserva\ModificarReserva.resx">
       <DependentUpon>ModificarReserva.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AbmReserva\RecepcionABMReserva.resx">
-      <DependentUpon>RecepcionABMReserva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmReserva\VincularCliente.resx">
       <DependentUpon>VincularCliente.cs</DependentUpon>
