--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -136,10 +136,7 @@
     <Compile Include="AbmReserva\GenerarReserva.Designer.cs">
       <DependentUpon>GenerarReserva.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListadoEstadistico\HomeListado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ListadoEstadistico\ConectorSQL.cs" />
+    <Compile Include="Repositorios\RepositorioListadoEstadistico.cs" />
     <Compile Include="ListadoEstadistico\Listado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -396,6 +393,9 @@
     <EmbeddedResource Include="FacturarEstadia\FacturarEstadias.resx">
       <DependentUpon>FacturarEstadias.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListadoEstadistico\Listado.resx">
+      <DependentUpon>Listado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PantallaPrincipal\FuncionesAdicionales.resx">
       <DependentUpon>FuncionesAdicionales.cs</DependentUpon>
