--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -136,6 +136,12 @@
     <Compile Include="AbmReserva\GenerarReserva.Designer.cs">
       <DependentUpon>GenerarReserva.cs</DependentUpon>
     </Compile>
+    <Compile Include="CambiarPassword\CambiarPasswordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CambiarPassword\CambiarPasswordForm.Designer.cs">
+      <DependentUpon>CambiarPasswordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositorios\RepositorioListadoEstadistico.cs" />
     <Compile Include="ListadoEstadistico\Listado.cs">
       <SubType>Form</SubType>
@@ -389,6 +395,9 @@
     <EmbeddedResource Include="AbmUsuario\ModificacionUsuario.resx">
       <DependentUpon>ModificacionUsuario.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CambiarPassword\CambiarPasswordForm.resx">
+      <DependentUpon>CambiarPasswordForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FacturarEstadia\FacturarEstadias.resx">
       <DependentUpon>FacturarEstadias.cs</DependentUpon>
